src/objects/FSTR__Process_Archive__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <fields>
        <fullName>FSTR__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Process Archive</relationshipLabel>
        <relationshipName>Process_Archive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completion_Date_Type__c</fullName>
        <label>Completion Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_360,FIND(&apos;.com/&apos;,$Api.Enterprise_Server_URL_360)+3) + &apos;/apex/fstr__processsummary?objId=&apos;+Id+&apos;&amp;archiverecid=&apos;+ FSTR__RecordId__c ,&apos;View Archive&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSTR__RecordId__c</fullName>
        <inlineHelpText>Salesforce record id.</inlineHelpText>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Process</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Process Archive</label>
    <nameField>
        <displayFormat>A{00000}</displayFormat>
        <label>Process Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>